--- a/WPFTest/WPFTest.csproj
+++ b/WPFTest/WPFTest.csproj
@@ -65,6 +65,7 @@
     </Compile>
     <Compile Include="Infrastructure\Commands\ActionCommand.cs" />
     <Compile Include="Infrastructure\Commands\Base\Command.cs" />
+    <Compile Include="Infrastructure\Commands\CloseApplicationCommand.cs" />
     <Compile Include="ViewModels\Base\ViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="Views\Windows\MainWindow.xaml.cs">
